# HonDash

./: .coveragerc  .dclintrc  .dockerignore  .gitignore  .gitmodules  .hadolint.yaml  .main.py.swo  .main.py.swp  .travis.yml  Arrow.py  Bar.py  CHANGELOG.md  Circle.py  CromeQD2.py  Dockerfile  Gforce.py  Makefile  README.md  Rpm.py  SerialPort.py  Text.py  Untitled-1.psd  Untitled.py  Untitled2  Untitled22.py  Untitled3.py  acel.py  borrar.py  circulo.py  config.txt  default_setup.json  docker-compose.yml  docker.env  main.py  main.py~  main.pz~  main3.py  mapping.json  odometer.txt  package-lock.json  (+7 more)
.crossbar/: key.priv  key.pub  node.pid
.github/workflows/: build.yml  docker_registry.yml
bench/: byte_test.py  test.py
classicgauge/: ClassicGauge.py  Text.py  test.py  vel.py
config/cron/: cron
config/nginx/: default
controller/: .Controller.py.swo  .Controller.py.swp  .Global.py.swp  Controller.py  Global.py
crontab/: crontab
devices/: .Odometer.py.swp  .SerialPort.py.swp  ADXL345.py  CromeQD2.py  Digital.py  DigitalInput.py  MCP3208.py  Odometer.py  Odometer.py~  SerialPort.py  Time.py  kpro.py
docs/: CNAME  CONTACT.md  DATALOGGER.md  FUEL.md  HARDWARE.md  KEYBOARD.md  README.md  READYTORUN.md  SENSORS.md  SETUP.md  SOFTWARE.md  VALUES.md  _config.yml  datajs_packet.txt  datajs_packet2.txt
docs/_layouts/: default.html
docs/logo/: sticker.psd
docs/schematics/: schematics12.odt  v2_board.odt
docs/wallpaper/: wallpaper.psd
first-pass/: package-lock.json  package.json
first-pass/src/: App.js  index.css
frontend/: bar.js  frontend.js  styles.css  text.js
gui/: .Gauge.py.swp  Arrow.py  Bar.py  Circle.py  Gauge.py  Gforce.py  Icon.py  Image.py  Rpm.py  Text.py
installation/: crontab  install_script.sh  refresh.sh
installation/services/: chromium-refresh.service  chromium.service  hondash.service
mierdaca/: font.py
mierdaca/adxl345/: borrar.py
my-app/: .eslintcache  package-lock.json  package.json
nginx/: default.conf
requirements/: requirements.txt
src/: NOTES.md  README.md  bluethoot.py  main.py  websocket.py
(+168 files in other folders)
