[tool.poetry]
name = "hondash"
version = "0.1.0"
description = ""
authors = ["pablobuenaposada <pablo.buenaposada@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
websockets = "^13.0.1"
freezegun = "^1.5.1"
pyusb = "^1.2.1"
jsonschema = "^4.23.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
