[tool.poetry]
name = "hondash"
version = "0.1.0"
description = ""
authors = ["pablobuenaposada <pablo.buenaposada@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^13.0.1"
pyusb = "^1.2.1"
jsonschema = "^4.23.0"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
freezegun = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"