[tool.poetry]
name = "hondash"
version = "0.1.0"
description = ""
authors = ["pablobuenaposada <pablo.buenaposada@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^13.0.1"
pyusb = "^1.2.1"
jsonschema = "^4.23.0"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
freezegun = "^1.5.1"
ruff = "^0.6.5"
black = "^24.8.0"

[tool.ruff]
target-version = "py311"
lint.select = [
    "F", # Pyflakes
    "E", # pycodestyle
    "W", # Warning
    "C90", # mccabe
    "I",  # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "PIE", # flake8-pie
    "Q", # flake8-quotes
    "SIM", # flake8-simplify
    "PGH", # pygrep-hooks
    "PLE", # Error
    "PLW", # Warning
    "RSE", # flake8-raise
    # TODO: DTZ, PT, TID, RET, ERA, PLR, TRY, UP, N
]
lint.ignore = ["E501", "SIM115", "C901", "B018"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"